Migration to Eclipse 3.5 with pluginPath, ...